<resources>
    <string name="app_name">Job</string>

    <string name="app_author">WeDo</string>
    <string name="open_now">立即进入</string>
    <string name="login_now">立即登录</string>

    <string name="please_input_phone_num_or_user_name">请输入手机号/用户名</string>
    <string name="btn_login">登　　录</string>
    <string name="register">注册</string>
    <string name="foget_password">忘记密码？</string>

    <string name="phone_num">手机号：</string>
    <string name="please_input_phone_num">请输入手机号</string>
    <string name="user_name">用户名：</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="code_num">验证码：</string>
    <string name="get_code">获取验证码</string>
    <string name="please_input_code_num">请输入验证码</string>
    <string name="password">密码：</string>
    <string name="please_input_password">请输入登录密码</string>
    <string name="btn_register">注　　册</string>

    <string name="str_point">指示器</string>
    <string name="str_logining">登录中</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_over_time">登录超时</string>
    <string name="please_input_city_name">请输入城市名称或拼音</string>
    <string name="chose_city">选择城市</string>
    <string name="loading">正在加载更多...</string>

    <string name="organize_terms_title">趣组队</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suggestion"><![CDATA[反馈&建议]]></string>
    <string name="about">关于</string>
    <string name="boult"><![CDATA[>]]></string>
    <string name="exit">退出登录</string>
    <string name="message">我的消息</string>

</resources>
