<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/thirdContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="wedo.job.fragment.third.FragmentThree">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/themeColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_setting" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:id="@+id/head_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/headlayout_selected_bg"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@+id/head_iv"
                    android:text="昵称"
                    android:textColor="#262600"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/head_iv"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/headlayout_selected_bg"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@+id/head_iv1"
                    android:text="未登录,没操作   >"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/head_iv1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/default_usericon"
                    android:scaleType="centerCrop" />

            </RelativeLayout>

        </LinearLayout>
    </FrameLayout>

    <!-- 反馈和建议-->
    <LinearLayout
        android:id="@+id/linear_message"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_selected_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/login_input_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/message"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/boult"
            android:textSize="15sp" />

    </LinearLayout>
    <!-- 反馈和建议-->
    <LinearLayout
        android:id="@+id/linear_suggestion"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/item_selected_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/login_input_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/suggestion"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/boult"
            android:textSize="15sp" />

    </LinearLayout>
    <!-- 关于-->
    <LinearLayout
        android:id="@+id/linear_about"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_selected_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/login_input_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/about"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/boult"
            android:textSize="15sp" />

    </LinearLayout>



</LinearLayout>
